style: fix overflow bug

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -1,11 +1,30 @@
-.tasks-container {
+.primary-tasks-container {
 	width: 25rem;
 	max-height: 20rem;
 	margin: 0 auto;
 	margin-top: 1rem;
-	padding: 0.5rem;
 
-	overflow-y: auto;
+	overflow-y: scroll;
+}
+
+.primary-tasks-container::-webkit-scrollbar {
+	width: 0.2rem;
+}
+
+.primary-tasks-container::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.primary-tasks-container::-webkit-scrollbar-thumb {
+	background-color: darkgrey;
+	outline: 1px solid slategrey;
+}
+
+.tasks-container {
+	width: 100%;
+	height: 100%;
+	padding: 1rem 0.5rem;
+	position: relative;
 
 	display: flex;
 	flex-direction: column;
@@ -16,23 +35,13 @@
 	font-weight: 600;
 }
 
-.tasks-container::-webkit-scrollbar {
-	width: 0.2rem;
-}
-
-.tasks-container::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-.tasks-container::-webkit-scrollbar-thumb {
-	background-color: darkgrey;
-	outline: 1px solid slategrey;
-}
-
 .tasks-container .task {
 	width: 90%;
 	min-height: 2.5rem;
 	padding: 0.5rem;
+	position: relative;
+
+	overflow: auto;
 
 	display: flex;
 	align-items: center;
@@ -45,10 +54,12 @@
 	word-break: break-all;
 }
 
-.tasks-container > .task {
-	margin-top: 5rem;
-}
-
 .task + .task {
 	margin-top: 1rem;
+}
+
+.tasks-container .empty-list {
+	font-size: 0.875rem;
+	font-weight: 400;
+	color: darkgray;
 }
